--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.json",
-    "build": "ng build",
+    "build": "ng build --prod --base-href=/webui/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
