--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       - ETCD_INITIAL_CLUSTER=etcd-01=http://etcd-01:2380,etcd-02=http://etcd-02:2380,etcd-03=http://etcd-03:2380
       - ETCD_INITIAL_CLUSTER_STATE=new
   etcd-web:
-    image: alpine 
+    build : . 
     hostname: etcd-web
     ports:
       - 8088:8088
@@ -61,4 +61,5 @@ services:
     stdin_open: true
     environment:
       - ENDPOINTS=http://etcd-01:2379,http://etcd-02:2379,http://etcd-03:2379
-    command: wget https://github.com/enshi363/etcd-ctl-ui-bundle/releases/download/untagged-d01e4464df6c91815076/etcd-webui-linux-amd64 && ./etcd-webui-linux-amd64  
+        #command: wget https://github.com/enshi363/etcd-ctl-ui-bundle/releases/download/untagged-d01e4464df6c91815076/etcd-webui-linux-amd64 && ./etcd-webui-linux-amd64  
+    command: ./etcd-webui-linux-amd64
